# django-generate-scaffold

./: pyproject.toml  requirements.txt  setup.py
test_project_ver4/: manage.py  pyproject.toml
test_project_ver4/test_app/: models.py
test_project_ver4/test_app/tests/: runtests.py
test_project_ver4/test_project_ver4/: asgi.py  settings.py  urls.py  wsgi.py
