[tool.poetry]
name = "test-project-ver4"
version = "0.1.0"
description = ""
authors = ["sawaTszm <sawa.tsuzumi@gmail.com>"]
readme = "README.md"
packages = [{include = "test_project_ver4"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.7"
unittest-xml-reporting = "^3.2.0"
cherrypy = "^18.8.0"
selenium = "^4.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
